--- a/_config.yaml
+++ b/_config.yaml
@@ -1,11 +1,11 @@
 # site properties and page defaults
-title: sweet-research-group
-subtitle: Smart Wearable Electronics and hEalth daTa
+title: 
+subtitle: Smart Wearable Electronics and hEalth daTa (SWEET) Research Group
 description: Wearables and AI to provide translational digital health solutions to monitor and improve health
 header: images/background.png
 footer: images/background.png
-# header-dark: false
-# footer-dark: false
+header-dark: false
+footer-dark: false
 proofer: false
 
 # site social media and other links
