--- a/_config.yaml
+++ b/_config.yaml
@@ -2,8 +2,8 @@
 title: 
 subtitle: Smart Wearable Electronics and hEalth daTa (SWEET) Research Group
 description: Wearables and AI to provide translational digital health solutions to monitor and improve health
-header: images/background.png
-footer: images/background.png
+header: images/background.jpg
+footer: images/background.jpg
 header-dark: false
 footer-dark: false
 proofer: false
