--- a/_config.yaml
+++ b/_config.yaml
@@ -4,8 +4,8 @@ subtitle: Smart Wearable Electronics and hEalth daTa (SWEET) Research Group
 description: Wearables and AI to provide translational digital health solutions to monitor and improve health
 header: images/background.jpg
 footer: images/background.jpg
-# header-dark: false
-# footer-dark: false
+header-dark: false
+footer-dark: false
 proofer: false
 
 # site social media and other links
