--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,7 @@
 # site properties and page defaults
 title: 
 subtitle: Smart Wearable Electronics and hEalth daTa (SWEET) Research Group
-description: Wearables and AI to provide translational digital health solutions to monitor and improve health
+description: Wearables and AI to provide translational digital health solutions
 header: images/background.jpg
 footer: images/background.jpg
 header-dark: false
